# cg

./: CMakeLists.txt
examples/algorithms/: CMakeLists.txt  v_douglas.cpp  v_vis_graph1.cpp
examples/convex_hull/: CMakeLists.txt  andrew_hull.cpp
examples/operations/: CMakeLists.txt  segment_contains_point.cpp  segment_intersect_segment.cpp  segment_intersect_triangle.cpp  triangle_contains_point.cpp
examples/operations/contains/: CMakeLists.txt  CMakeLists.txt~  ccw_convex_contour_contains_point.cpp  rectangle_contains_point.cpp
examples/operations/intersect/: CMakeLists.txt  CMakeLists.txt~  segment_intersect_rectangle.cpp
examples/operations/orientation/: CMakeLists.txt  ccw_contour_convex.cpp  orientation_contour_ccw.cpp
include/cg/algorithms/: douglas.h
include/cg/common/: douglas.h
include/cg/convex_hull/: andrew.h  graham.h  quick_hull.h  tools.h
include/cg/operations/: convex.h  orientation.h
include/cg/operations/contains/: contour_point.h  segment_point.h  triangle_point.h
include/cg/operations/has_intersection/: rectangle_segment.h  segment_segment.h  triangle_segment.h
include/cg/primitives/: contour.h  rectangle.h  segment.h
include/cg/visibility/: short_path.h  visibility_slow.h
tests/: CMakeLists.txt  contains.cpp  convex_hull.cpp  douglas.cpp  has_intersection.cpp  orientation.cpp  visibility.cpp
